--- a/src/main/resources/static/asn2.html
+++ b/src/main/resources/static/asn2.html
@@ -16,13 +16,13 @@
 
                 
                     <div class="d-grid gap-2">
-                        <a href="/students/viewadd" class="btn btn-link">Add Student</a>
+                        <a href="/students/viewAdd" class="btn btn-link">Add Student</a>
                     </div>
                     <div class="d-grid gap-2">
-                        <a href="/students/viewedit" class="btn btn-link">Edit/Update Student</a>
+                        <a href="/students/viewEdit" class="btn btn-link">Edit/Update Student</a>
                     </div>
                     <div class="d-grid gap-2">
-                        <a href="/students/viewdelete" class="btn btn-link">Delete Student</a>
+                        <a href="/students/viewDelete" class="btn btn-link">Delete Student</a>
                     </div>
                     <div class="d-grid gap-2">
                         <a href="/students/view" class="btn btn-link">Display Students</a>
