trying to fix part 1

--- a/src/main/resources/static/asn2.html
+++ b/src/main/resources/static/asn2.html
@@ -16,16 +16,16 @@
 
                 
                     <div class="d-grid gap-2">
-                        <a href="/students/viewAdd" class="btn btn-link">Add Student</a>
+                        <a href="/Add" class="btn btn-link">Add Student</a>
                     </div>
                     <div class="d-grid gap-2">
-                        <a href="/students/viewEdit" class="btn btn-link">Edit/Update Student</a>
+                        <a href="/Edit" class="btn btn-link">Edit/Update Student</a>
                     </div>
                     <div class="d-grid gap-2">
-                        <a href="/students/viewDelete" class="btn btn-link">Delete Student</a>
+                        <a href="/Delete" class="btn btn-link">Delete Student</a>
                     </div>
                     <div class="d-grid gap-2">
-                        <a href="/students/view" class="btn btn-link">Display Students</a>
+                        <a href="/Display" class="btn btn-link">Display Students</a>
                     </div>
 
                 </div>	
